--- a/donor_form.html
+++ b/donor_form.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
     <script type="text/javascript">
-
+ 
         var statebyDistrict = {
         
         Andaman_and_Nicobar_Islands:["Choose Your District","Nicobar","North and Middle Andaman","South Andaman"],
@@ -268,9 +268,12 @@
     </footer>
 
     <!-- js files extensions linking  -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>  -->
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script> 
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <script src="js/forms_resp.js"></script>
     <script src="js/donor_form_js.js"></script>
