--- a/volunteer_form.html
+++ b/volunteer_form.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-
+ 
     <!-- beginning of the navbar  -->
     
     <nav class="navbar">
@@ -99,9 +99,12 @@
     </footer>
 
     <!-- js files extensions linking  -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script> 
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <script src="js/forms_resp.js"></script>
     <script src="js/volunteer_form_js.js"></script>
